--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgressql://${DB_HOST:localhost}:${DB_PORT:5435}/${DB_NAME:inventory-db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5435}/${DB_NAME:inventory-db}
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:postgres}
 
